fix: adjust spacing in OSDContainer and update slider length for consistency

--- a/styles/osd.scss
+++ b/styles/osd.scss
@@ -10,11 +10,12 @@
   background-color: theme.$shadow-color;
   padding: functions.toEm(12) functions.toEm(20);
   border-radius: variable.$radius-large;
-  border: none;
+  min-width: 200px;
   margin-bottom: 100px;
 
   #osd-level {
     font-weight: 600;
+    min-width: 40px;
   }
 
   @include mixins.slider;
